[FEAT] Move pagination to the backend